[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/GFX/Material/Red.material" type="Material" id=1]
[ext_resource path="res://Generator/MapElements/Blocks/PathChanger2.gd" type="Script" id=2]
[ext_resource path="res://Generator/MapElements/MapElement.gd" type="Script" id=3]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1, 1, 1 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 3, 1, 4 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.5, 0.5, 3 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.5, 0.5, 2 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 1.5, 0.5, 3 )

[sub_resource type="GDScript" id=8]
script/source = "extends Spatial

func _on_Area_body_entered():
	Pathfinder.reset()
	get_tree().change_scene(\"res://GUI/GUI.tscn\")
"

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="CubeMesh" id=7]
size = Vector3( 1, 1, 1 )

[node name="Cube3x3" type="Spatial"]
script = ExtResource( 3 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, -0.5 )
material_override = ExtResource( 1 )
mesh = SubResource( 1 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, -3 )
material_override = ExtResource( 1 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, -5.5 )
material_override = ExtResource( 1 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape1" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, -3 )
shape = SubResource( 3 )

[node name="CollisionShape2" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -0.5, -3 )
shape = SubResource( 4 )

[node name="CollisionShape3" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.5, -3 )
shape = SubResource( 4 )

[node name="Next" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6 )

[node name="Path" type="Spatial" parent="."]

[node name="Position3D1" type="Position3D" parent="Path"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )

[node name="Position3D2" type="Position3D" parent="Path"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[node name="Position3D3" type="Position3D" parent="Path"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3 )

[node name="Position3D4" type="Position3D" parent="Path"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4 )

[node name="Position3D5" type="Position3D" parent="Path"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5 )

[node name="Position3D6" type="Position3D" parent="Path"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6 )

[node name="PathLeft" type="Spatial" parent="."]

[node name="Position3D1" type="Position3D" parent="PathLeft"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -1 )

[node name="Position3D2" type="Position3D" parent="PathLeft"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -2 )

[node name="Position3D3" type="Position3D" parent="PathLeft"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -3 )

[node name="Position3D4" type="Position3D" parent="PathLeft"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -4 )

[node name="Position3D5" type="Position3D" parent="PathLeft"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -5 )

[node name="Position3D6" type="Position3D" parent="PathLeft"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -6 )

[node name="PathRight" type="Spatial" parent="."]

[node name="Position3D1" type="Position3D" parent="PathRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -1 )

[node name="Position3D2" type="Position3D" parent="PathRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -2 )

[node name="Position3D3" type="Position3D" parent="PathRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -3 )

[node name="Position3D4" type="Position3D" parent="PathRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -4 )

[node name="Position3D5" type="Position3D" parent="PathRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -5 )

[node name="Position3D6" type="Position3D" parent="PathRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -6 )

[node name="PathChanger2" type="Spatial" parent="." groups=[
"PathChanger",
]]
script = ExtResource( 2 )

[node name="Area" type="Area" parent="PathChanger2"]

[node name="CollisionShape" type="CollisionShape" parent="PathChanger2/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -3 )
shape = SubResource( 5 )

[node name="Obstacle" type="Spatial" parent="."]
script = SubResource( 8 )

[node name="Area" type="Area" parent="Obstacle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -3 )
collision_layer = 8
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Obstacle/Area"]
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="Obstacle/Area"]
mesh = SubResource( 7 )
material/0 = null

[connection signal="body_entered" from="PathChanger2/Area" to="PathChanger2" method="_on_Area_body_entered"]
[connection signal="body_exited" from="PathChanger2/Area" to="PathChanger2" method="_on_Area_body_exited"]
[connection signal="body_entered" from="Obstacle/Area" to="Obstacle" method="_on_Area_body_entered"]
